--- a/Parsip100/ParsipHaptics/Framework.vcxproj
+++ b/Parsip100/ParsipHaptics/Framework.vcxproj
@@ -53,7 +53,7 @@
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectName)_$(Configuration)</TargetName>
     <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IncludePath)</IncludePath>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(ProjectName)_$(Configuration)</TargetName>
-    <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(LibraryPath)</LibraryPath>
+    <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\pc\Debug;$(LibraryPath)</LibraryPath>
     <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">..\pc\$(Configuration);$(FREETYPE_INSTALL_DIR)\objs\release_mt;$(TBB_INSTALL_DIR)\lib\ia32\vc10;$(LibraryPath)</LibraryPath>
     <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(TBB_INSTALL_DIR)\include;$(FREETYPE_INSTALL_DIR)\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
